Rectification of Rendering Issue
In the "About Us" page, the line containing the individual social media handles was overlapping with the description of the members. This code will rectify it.

--- a/CSS/aboutUsStyle.css
+++ b/CSS/aboutUsStyle.css
@@ -85,10 +85,10 @@ img.member
 div.text
 {
     width: 100%;
-    height: 38vh;
     background-color: transparent;
     padding: 1vw 6vw;
     text-align: justify;
+    overflow-y: auto;
 }
 
 div.socialMedia
